# botdiril-game-backend

./: Cargo.toml  Dockerfile
.github/workflows/: create-docker-image.yaml
src/: main.rs
src/auth/: jwt.rs  mod.rs
src/game_api/: db.rs  game_err.rs  mod.rs
src/game_api/commands/: daily.rs  mod.rs
src/game_api/game_struct/: mod.rs
