[package]
name = "baryonic-game-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-cors = "0.6"
actix-files = "0.6"
actix-broker = "0.4"
actix-web-httpauth = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
jsonwebtoken = "8"
redis = { version = "0.21", features = ["tokio-comp"] }
env_logger = "0.9"
log = "0.4"
mongodb = "2.2"
derive_more = "0.99"
enum-map = {version = "2.4", features = ["serde"]}